What's New for PSPRadio 
========================
0.36-pre6
(jpfouch48) Added scrolling text to metadata area. (Currently double buffering
is not working so it may look alittle choppy)

0.36-pre5
(raf) Lots of cleanup / refactoring
(raf) Now downloads a compressed version of SHOUTcast.com's database instead.
(sandberg) Added a particle system as a new background effect for the 3D UI.
(raf) Simplified wifi selection. One option to select profile or turn off.
(raf) Screens are classes now. If going back and forth between screens, they will retain their state.
(sandberg) Added support for taking screenshots. Use the Hold button to take a screenshot. When the LED
stops flashing the screenshot is stored in the Screenshots folder (you need to create that folder, if you
don't have it already).
(raf) Modified the pspsdk's text rendering system to allow for png backgrounds and transparent text.
(raf) Gave the TextUI a facelift by using backgrounds for the different screens.. This is configurable via the cfg file.
(raf) Fixed bug where if the playlist was empty, garbage was being used when the user pressed X or O.
(sandberg) Added support repeated and long key presses. The repeated key presses are usefull when navigating
the playlists.
(sandberg) Moved the screenshot function to be activated on a long key press on Select (appr. 1 second). The
screenshot will be taken when releasing the button.
(raf) Backup the db in case the download fails.
(raf) Disabled the HOME menu button for now. To exit PSPRadio, go to Options and select Exit.

0.36-pre4 (r427)
(raf) Enabled the CPU speed change option.
(raf) Added 111MHz; which is not useful for MP3, but works for OGGs in the text ui, and can save battery.
(raf) Refactored PSPApp/PSPRadio so that it runs in USERMODE. The drivers for the network and USB are now started from a kernel thread during app construction.
This allows for DHCP to work! (thanks to PspPet and 'benji' for figuring this out.)